@@ -1149,7 +1149,6 @@ Localization
 
         //Missile & CM Settings
         #LOC_BDArmory_Settings_MissileCMToggle = Show Missile & Countermeasure Settings
-        #LOC_BDArmory_Settings_MissileFuelDeduction = Missiles have a Fuel(weight) Deduction based on it's config
         #LOC_BDArmory_Settings_AspectedIRSeekers = IR Occlusion Affects Missiles
         #LOC_BDArmory_Settings_FlareFactor = Max Flare Start Heat Mult.
         #LOC_BDArmory_Settings_ChaffFactor = Chaff Pos. Distortion Mult.
